<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="55dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:layout_marginBottom="40dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/userid_hint"
                android:id="@+id/input_user_id"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/user_nickname_hint"
                android:id="@+id/input_user_nickname"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password_hint"
                android:id="@+id/input_password"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:text="@string/register"
            android:id="@+id/btn_register"
            android:padding="12dp"
            android:background="@drawable/white_rounded_button"/>

    </LinearLayout>

    <ProgressBar
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/RegisterLoadingProgressBar"
        android:layout_centerInParent="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_alignBottom="@+id/RegisterLoadingProgressBar"
        android:layout_alignLeft="@+id/RegisterLoadingProgressBar"
        android:layout_alignRight="@+id/RegisterLoadingProgressBar"/>

</RelativeLayout>