<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="20dp"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/profile_photo"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                app:civ_border_color="@color/black"
                app:civ_border_width="2dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_photo"
                android:id="@+id/changeProfilePhoto"
                android:layout_below="@+id/profile_photo"
                android:layout_centerHorizontal="true"
                android:textColor="@color/link_blue"
                android:textSize="16sp"
                />


            <!-- display user_id section -->
            <!--
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/changeProfilePhoto"
                android:layout_marginTop="80dp"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/relLayout1"
                >
                
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_profile"
                    android:layout_centerVertical="true"
                    />
                
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_id"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:background="@null"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/user_nickname_hint"
                    />

            </RelativeLayout>
            -->

            <!-- display user_nickname section -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/changeProfilePhoto"
                android:layout_marginTop="80dp"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/relLayout2"
                >

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_profile"
                    android:layout_centerVertical="true"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_nickname"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:background="@null"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/user_nickname_hint"
                    />
            </RelativeLayout>


            <!-- display user_motto section -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relLayout2"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/relLayout3"
                android:layout_marginTop="15dp"
                >

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_description"
                    android:layout_centerVertical="true"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_motto"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:background="@null"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/user_motto_hint"
                    />
            </RelativeLayout>
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/text_private_information"
                android:layout_below="@id/relLayout3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:textColor="@color/black"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/textPrivateInformation"
                />

            <!-- display user_phone section -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/textPrivateInformation"
                android:layout_marginTop="40dp"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/relLayout_phone"
                >

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_phone"
                    android:layout_centerVertical="true"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_phone"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:background="@null"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/user_phone_hint"
                    />

            </RelativeLayout>

            <!-- display user_email section -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relLayout_phone"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/relLayout_email"
                android:layout_marginTop="15dp"
                >

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_email"
                    android:layout_centerVertical="true"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_email"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:background="@null"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/user_email_hint"
                    />
            </RelativeLayout>

        </RelativeLayout>


    </ScrollView>
</merge>